2004-06-21  Edd Dumbill <edd@usefulinc.com>

	* ui/phonemgr.glade: remove irritating single pixel border on
	textview in message send dialog. In message received dialog,
	change "OK" to "Close".

2004-06-20  Edd Dumbill <edd@usefulinc.com>

	* libgsm/gsm.cc: connect() empty send queue on connection to
	avoid repeated sending of failing messages.  Increase timeout
	on serial port to 30 seconds from 5.
	* ui/phonemgr.glade: some HIGgification of dialogs.

2004-06-18  Edd Dumbill <edd@usefulinc.com>

	* libgsm/gsm.cc: delete MeTa when disconnected.
	* src/*.c: partially working phonemgr app now.
	* src/connection.c: make connection and disconnection
	happen in a separate thread, so the GUI doesn't block while
	this happens.
	* src/connection.c: implement auto-reconnect feature.
	* src/connection.c, src/ui.c: message receiving functional.
	* src/connection.c, ui.c: add disconnect_signal_handlers() to
	be called on quit, so don't deadlock in status change.
	* src/icon.c: make tray_icon_set do a tooltip too.
	* libgsm/gsm.cc: disconnect on errors properly.
	* libgsm/phonemgr-listener.cc: set disconnected flag on error.
	* src/menu.c: add Send Message menu item.
	* ui/phonemgr.glade: a bit of HIGgification.
	* src/ui.c: implement sending dialog.
	* ui/pixmaps/, Makefile.am: move pngs into same directory as
	glade file: abandon hope of glade respecting the pixmap dir.
	* src/gnome-phone-manager.desktop.in: correct icon path
	* po/POTFILES.in: update.
	* src/icon.c: update pixmaps path.
	* src/main.c: init UI before tray icon.
	* src/ui.c: prefer local UI to installed one, if available.
	* src/ui.c: hook up the Reply button.
	* src/connection.c: deal with empty bdaddr better.
	* Release 0.3.

2004-06-17  Edd Dumbill <edd@usefulinc.com>

	* Checking into GNOME CVS.  Starting port to the new Bonobo-less
	gnome-bluetooth framework.
	* Move gsm stuff to libgsm/. Start work on GObject wrapper for it.
	* libgsm/.cvsignore, .cvsignore: add cvsignores.