@@ -1,3 +1,10 @@
+2004-06-23  Edd Dumbill <edd@usefulinc.com>
+
+	* libgsm/phonemgr-listener.cc (on_phone_message()): convert message
+	to utf-8 from iso-8859-1.
+	* libgsm/phonemgr-listener.cc (phonemgr_listener_queue_message()): 
+	convert outgoing message from utf-8 to iso-8859-1.
+
 2004-06-21  Edd Dumbill <edd@usefulinc.com>
 
 	* ui/phonemgr.glade: remove irritating single pixel border on
